syntax = "proto3";

option csharp_namespace = "server.api.gRPC.Admin";

package truck;

import "google/api/annotations.proto";
import "gRPC/Protos/shared.proto";

service Truck {
	rpc GetTrucks (GetTrucksRequest) returns (GetTrucksReply){
		option (google.api.http) = {
			post: "/api/admin/truck"
		};
	}

	rpc AddTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			get: "/api/admin/truck",
			body : "*"	
		};
	}

	rpc UpdateTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			put: "/api/admin/truck",
			body : "*"	
		};
	}

	rpc EditTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			patch: "/api/admin/truck",
			body : "*"	
		};
	}

	rpc RemoveTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			delete: "/api/admin/truck",
			body : "*"	
		};
	}
}

message GetTrucksRequest {
	oneof oneOfGetTruckRequest {
		string storeId = 1;
		string id = 2;
	}
	shared.Pagination p = 3;
}

message GetTrucksReply {
	repeated TruckMessage trucks = 1;
	int64 count = 2;
}

message TruckMessage {
	uint64 id = 1;
	string storeId = 2;
	int32 capacity = 3;
}

